fixed logo overflown into 2 rows, breaking layout

--- a/resources/assets/sass/_tpl-override-eliteadmin.scss
+++ b/resources/assets/sass/_tpl-override-eliteadmin.scss
@@ -1,8 +1,11 @@
 
 
 @media (min-width: 768px) {
-  .top-left-part {
-    width: 310px;
+  .fix-sidebar {
+    .top-left-part {
+      width: 340px;
+      padding-left: 20px;
+    }
   }
 }
 
